--- a/pages/index.css
+++ b/pages/index.css
@@ -13,5 +13,9 @@
 @import url(../blocks/lead/__picture/lead__picture.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
-
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/_data/intro__list_data.css);
 
