--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(auto-fit, minmax(260px, 284px));
     grid-template-rows: repeat(auto-fit, minmax(200px, 213px));
     width: 100%;
-    margin: 0 auto 0;
+    margin: 0 auto 92px;
     justify-content: center;
 }
 
@@ -21,6 +21,7 @@
         gap: 16px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 352px));
         grid-template-rows: repeat(auto-fit, minmax(200px, 286px));
+        margin: 0 auto 88px;
     }
  }
 
@@ -29,5 +30,6 @@
         gap: 12px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 288px));
         grid-template-rows: repeat(auto-fit, minmax(200px, 216px));
+        margin: 0 auto 64px;
     }
  }
