--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,7 +4,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-image: url("../sprint-3-images/cover-trains.jpg");
+    background-image: url("../../../sprint-3-images/cover-trains.jpg");
     background-repeat: no-repeat;
     background-position: center ;
     text-decoration: none;
