--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -13,9 +13,18 @@
     align-self: flex-start;
  }
 
- @media screen and (max-width: 320px) {
-    .lead__image{
+ @media screen and (max-width: 768px) {
+    .lead__caption{
     font-size: 10px;
     line-height: 14px; 
+    padding-left: 24px;
+    }
+}
+
+ @media screen and (max-width: 320px) {
+    .lead__caption{
+    font-size: 10px;
+    line-height: 14px; 
+    padding-left: 16px;
     }
 }
