--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,5 @@
 .header__lang-link{
-    width: 29px;
-    height: 28px;
+    max-width: 29px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
