--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -6,7 +6,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;
-    width: 18px;
+    max-width: 18px;
 }
 
 @media screen and (max-width: 650px) {
