--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title{
     display: block;
-    width: 690px;
+    max-width: 690px;
     margin: 0 0 40px 0;
     font-family: Inter;
     font-size: 54px;
