--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,7 +8,7 @@
     justify-content: center;
 }
 
-@media screen and ((max-width: 1024px)) {
+@media screen and (max-width: 1024px) {
     .photo-grid{ 
         gap: 14px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 300px));
@@ -16,7 +16,7 @@
     }
  }
 
- @media screen and ((max-width: 768px)) {
+ @media screen and (max-width: 768px) {
     .photo-grid{ 
         gap: 16px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 352px));
@@ -25,7 +25,7 @@
     }
  }
 
- @media screen and ((max-width: 320px)) {
+ @media screen and (max-width: 320px) {
     .photo-grid{ 
         gap: 12px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 288px));
