--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,7 +9,7 @@
     color:#FFFFFF;
     max-width: 560px;
     width: 100%;
-    margin: 0 0 32px
+    margin: 0 0 32px;
 }
 
 @media screen and (max-width: 525px) {
