--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -7,21 +7,21 @@
     display: block;
 }
 
-@media screen and ((max-width: 1024px)) {
+@media screen and (max-width: 1024px) {
     .photo-grid__item{ 
         max-width: 300px;
         max-height: 225px;
     }
  }
 
- @media screen and ((max-width: 768px)) {
+ @media screen and (max-width: 768px) {
     .photo-grid__item{ 
         max-width: 352px;
         max-height: 286px;
     }
  }
 
- @media screen and ((max-width: 320px)) {
+ @media screen and (max-width: 320px) {
     .photo-grid__item{ 
         max-width: 288px;
         max-height: 216px;
