checking some mistakes

--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,7 +1,5 @@
 .footer__list{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(auto,auto));
-    grid-auto-flow: column;
+    display: flex;
     gap: 18px;
     list-style-type: none;
     padding-left: 0;
@@ -10,7 +8,7 @@
 
 @media screen and (max-width: 650px) {
     .footer__list{
-       grid-auto-flow: row;
+       flex-direction: column;
        margin-left: 16px;
        gap: 32px;
     }
