--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -28,9 +28,16 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 665px) {
+    .place__paragraph{
+        margin: 0 0 25px 16px;
+    }
+}
+
+@media screen and (max-width: 475px) {
     .place__paragraph{
         margin: 0 16px 25px;
         max-width: 288px;
     }
 }
+
