--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,10 +1,9 @@
 .cover__link{
     position: relative;
     max-width: 1184px;
+    min-height: 740px;
     width: 100%;
-    top: 0;
-    left: 0;
-    background-image: url("../../../sprint-3-images/cover-trains.jpg");
+    background-image: url("../../../images/cover-trains.jpg");
     background-repeat: no-repeat;
     background-position: center;
     text-decoration: none;
@@ -13,8 +12,8 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    padding: 245px 0;
     background-size: 100% 100%;
+    justify-content: center;
 }
 
 .cover__link::before{
@@ -22,8 +21,9 @@
     position: absolute;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
-    opacity: 0;
+    opacity: 0.3;
     background-color: #2a2c2f;
     
    
@@ -31,28 +31,23 @@
 
 .cover__link:hover::before{
     opacity: 0.8;
+    transition: .3s linear .3s;
 }
 
 @media screen and (max-width: 1024px) {
     .cover__link{
-        padding: 195px 0;
+        min-height: 640px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .cover__link{
-        padding: 115px 0;
-    }
-}
-
-@media screen and (max-width: 525px) {
-    .cover__link{
-       padding: 75px 0;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover__link{
-        padding: 33px 0;
+        min-height: 200px;
     }
 }
