--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -16,7 +16,7 @@
     .cover__title{
         font-size: 44px;
         line-height: 46px;
-        margin: 0 0 24px;
+        margin-bottom: 24px;
     }
 }
 
@@ -24,6 +24,6 @@
     .cover__title{
         font-size: 32px;
         line-height: 35px;
-        margin: 0 0 16px;
+        margin-bottom: 16px;
     }
 }
