--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,7 +7,13 @@
     font-size: 16px;
     line-height: 18px;
     max-width: 18px;
+    opacity: 1;
 }
+
+.footer__link:hover {
+    opacity: .8;
+    transition: .3s linear .3s;
+  }
 
 @media screen and (max-width: 650px) {
     .footer__link{
