--- a/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,11 +1,10 @@
 .header__lang-link_active{
     text-decoration: underline;
-    width: 30px;
 }
 
 @media screen and (max-width: 320px) {
     .header__lang-link_active{
-        width: 22px;
-        height: 20px;
+        font-size: 18px;
+        line-height: 20px;
     }
 }
