--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,18 +6,21 @@
 
 @media screen and (max-width: 1024px) {
     .header{
-        padding: 28px 48px 48px;
+        padding-bottom: 48px;
     }
 }
 
 @media screen and (max-width: 768px) {
     .header{
-        padding: 28px 24px 48px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .header{
-        padding: 16px 16px 48px;
+        padding-top: 16px;
+        padding-left: 16px;
+        padding-right: 16px;
     }
 }
