--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,7 @@
 .intro{
     display: flex;
     flex-direction: column;
-    padding-top: 114px;
+    padding-top: 93px;
     padding-bottom: 92px;
     padding-left: 148px;
 }
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 768px) {
     .intro{
-        padding: 88px 24px;
+        padding: 88px 24px 83px;
     }
 }
 
