--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,5 @@
 .lead__subtitle{
-    margin: 64px auto 32px;
+    margin: 30px auto 65px;
     color:#FFFFFF;
     font-family: 'Inter';
     font-style: normal;
@@ -8,6 +8,12 @@
     line-height: 36px;
     text-align: center;
     max-width: 640px;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__subtitle{
+        margin-bottom: 60px;
+    }
 }
 
 @media screen and (max-width: 680px) {
