--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -7,18 +7,7 @@
 
 @media  screen and (max-width: 1024px) {
     .lead {
-        padding: 0 48px 0;
-    }
-}
-
-@media  screen and (max-width: 768px) {
-    .lead {
-        padding: 0 0 0;
-    }
-}
-
-@media  screen and (max-width: 320px) {
-    .lead {
-        padding: 0 0 0;
+        padding-left: 48px ;
+        padding-right: 48px;
     }
 }
