--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -18,7 +18,7 @@
 
  @media screen and (max-width: 768px) {
     .photo-grid{ 
-        gap: 16px;
+        gap: 12px 16px;
         grid-template-columns: repeat(auto-fit, minmax(260px, 352px));
         grid-template-rows: repeat(auto-fit, minmax(200px, 286px));
         margin: 0 auto 88px;
