--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,10 +10,17 @@
     margin: 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     .place__title{
-        line-height: 35px;
-        font-size: 32px;
+        max-width: 330px;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 740px) {
+    .place__title{
+        margin-left: 16px;
     }
 }
 
