--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,6 +5,16 @@
     font-size: 12px;
     line-height: 12px;
     color: #AAAAAA;
+    margin: 0 0 12px;
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+    
+}
+
+@media screen and (max-width: 665px) {
+    .place__url-heading{
+        margin-left: 16px;
+    }
 }
 
 @media screen and (max-width: 320px) {
