--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,33 +1,33 @@
-.header__lang-link{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
-    color: #FFFFFF;
-    text-decoration: none;
-    margin-right: 18px;
-    opacity: 1;
+.header__lang-link {
+  font-family: "Inter", "Arial", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 28px;
+  color: #ffffff;
+  text-decoration: none;
+  margin-right: 18px;
+  opacity: 1;
 }
 
 .header__lang-link:hover {
-    opacity: .8;
-    transition: .3s linear .3s;
-  }
+  opacity: 0.8;
+  transition: 0.3s linear 0.3s;
+}
 
-.header__lang-link:last-child{
-    margin-right: 0;
+.header__lang-link:last-child {
+  margin-right: 0;
 }
 
 @media screen and (max-width: 1024px) {
-    .header__lang-link{
-        margin-right: 15px;
-    }
+  .header__lang-link {
+    margin-right: 15px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .header__lang-link{
-        font-size: 18px;
-        line-height: 20px;
-    }
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
