--- a/blocks/intro/__list-data/intro__list-data.css
+++ b/blocks/intro/__list-data/intro__list-data.css
@@ -1,9 +1,9 @@
-.intro__list-data{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 18px;
-    color: #FFFFFF;
-    margin: 0;
+.intro__list-data {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+  margin: 0;
 }
