--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,24 +1,24 @@
-.place__url-heading{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 12px;
-    color: #AAAAAA;
-    margin: 0 0 12px;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    
+.place__url-heading {
+  font-family: "Inter", "Arial", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 12px;
+  color: #aaa;
+  margin: 0 0 12px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 665px) {
-    .place__url-heading{
-        margin-left: 16px;
-    }
+  .place__url-heading {
+    margin-left: 16px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .place__url-heading{
-        margin: 0 16px;
-    }
+  .place__url-heading {
+    margin-right: 16px;
+    margin-bottom: 16px;
+  }
 }
