--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,25 +1,28 @@
 .cover{
-    max-width: 1184px;
-    min-width: 320px;
-    width: 100%;
-    margin: 0 auto;
-    margin: 92px auto;
+  max-width: 1184px;
+  min-width: 320px;
+  width: 100%;
+  margin: 0 auto;
+  margin: 92px auto;
 }
 
 @media screen and (max-width: 768px) {
-    .cover{
-        margin: 90px auto 88px;
-    }
+  .cover{
+     margin-top: 90px;
+     margin-bottom: 88px;
+  }
 }
 
 @media screen and (max-width: 525px) {
     .cover{
-        margin: 74px auto 72px;
+      margin-top: 74px;
+      margin-bottom: 72px; 
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover{
-        margin: 66px auto 64px;
+      margin-top: 66px;
+      margin-bottom: 64px;
     }
 }
