--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,23 +1,23 @@
-.footer__link{
-    color: white;
-    text-decoration: none;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
-    max-width: 18px;
-    opacity: 1;
+.footer__link {
+  color: white;
+  text-decoration: none;
+  font-family: "Inter", "Arial", serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  max-width: 18px;
+  opacity: 1;
 }
 
 .footer__link:hover {
-    opacity: .8;
-    transition: .3s linear .3s;
-  }
+  opacity: 0.8;
+  transition: 0.3s linear 0.3s;
+}
 
 @media screen and (max-width: 650px) {
-    .footer__link{
-        font-size: 24px;
-        line-height: 24px;
-    }
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
