--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -1,15 +1,21 @@
-.footer__list{
-    display: flex;
-    gap: 18px;
-    list-style-type: none;
-    padding-left: 0;
-    margin: 0;
+.footer__list {
+  display: flex;
+  gap: 18px;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 650px) {
-    .footer__list{
-       flex-direction: column;
-       margin-left: 16px;
-       gap: 32px;
-    }
+  .footer__list {
+    flex-direction: column;
+    margin-left: 16px;
+    gap: 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__list {
+    gap: 30px;
+  }
 }
