--- a/blocks/intro/__list-data-number/intro__list-data-number.css
+++ b/blocks/intro/__list-data-number/intro__list-data-number.css
@@ -1,8 +1,8 @@
-.intro__list-data-number{
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 18px;
-    color: #FFFFFF;
+.intro__list-data-number {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
 }
