--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,24 +1,24 @@
-.intro__text{
-    display: block;
-    max-width: 690px;
-    font-family: Inter;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 26px;
-    text-align: left;
-    color: #FFFFFF;
-    margin: 0 0 33px;
+.intro__text {
+  display: block;
+  max-width: 690px;
+  font-family: Inter, "Arial", serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  text-align: left;
+  color: #ffffff;
+  margin: 0 0 33px;
 }
 
 @media screen and (max-width: 768px) {
-    .intro__text{
-       max-width: 720px;
-       width: 100%; 
-    }
+  .intro__text {
+    max-width: 720px;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .intro__text{
-       margin: 0 0 34px;
-    }
+  .intro__text {
+    margin: 0 0 34px;
+  }
 }
