--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,25 +1,25 @@
-.lead__caption{
-    color: #FFFFFF;
-    font-family: Inter;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 14px;
-    letter-spacing: 0.22em;
-    text-transform: uppercase;
-    text-align: left;
-    margin: 4px 0 0;
-    max-width: 158px;
-    align-self: flex-start;
- }
-
- @media screen and (max-width: 768px) {
-    .lead__caption{
-    padding-left: 24px;
-    }
+.lead__caption {
+  color: #ffffff;
+  font-family: Inter, "Arial", serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.22em;
+  text-transform: uppercase;
+  text-align: left;
+  margin: 4px 0 0;
+  max-width: 158px;
+  align-self: flex-start;
 }
 
- @media screen and (max-width: 320px) {
-    .lead__caption{
-    padding-left: 16px;
-    }
+@media screen and (max-width: 768px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__caption {
+    padding-left: 17px;
+  }
 }
