--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,13 +1,20 @@
 .lead {
-    padding: 0 148px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  padding: 0 148px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-@media  screen and (max-width: 1024px) {
-    .lead {
-        padding-left: 48px ;
-        padding-right: 48px;
-    }
+@media screen and (max-width: 1024px) {
+  .lead {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
