--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
-.page{
-    background-color: #2A2C2F;
-    max-width: 1280px;
-    width: 100%;
-    height: 100%;
+.page {
+  background-color: #2a2c2f;
+  max-width: 1280px;
+  width: 100%;
+  height: 100%;
 }
