--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,39 +1,40 @@
-.place__title{
-    max-width: 460px;
-    width: 100%;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
-    color: #FFFFFF;
-    margin: 0;
+.place__title {
+  max-width: 460px;
+  width: 100%;
+  font-family: "Inter", "Arial", serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  color: #ffffff;
+  margin: 0;
 }
 
 @media screen and (max-width: 768px) {
-    .place__title{
-        max-width: 330px;
-        font-size: 42px;
-        line-height: 46px;
-    }
+  .place__title {
+    max-width: 330px;
+    font-size: 42px;
+    line-height: 46px;
+  }
 }
 
 @media screen and (max-width: 740px) {
-    .place__title{
-        margin-left: 16px;
-    }
+  .place__title {
+    margin-left: 16px;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .place__title{
-        line-height: 35px;
-        font-size: 32px;
-        max-width: 300px;
-    }
+  .place__title {
+    line-height: 35px;
+    font-size: 32px;
+    max-width: 300px;
+  }
 }
 
 @media screen and (max-width: 320px) {
-    .place__title{
-        margin: 0 16px;
-    }
+  .place__title {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
 }
