--- a/blocks/intro/__list-data-number/intro__list-data-number.css
+++ b/blocks/intro/__list-data-number/intro__list-data-number.css
@@ -1,5 +1,5 @@
 .intro__list-data-number {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
