--- a/blocks/intro/__list-data/intro__list-data.css
+++ b/blocks/intro/__list-data/intro__list-data.css
@@ -1,5 +1,5 @@
 .intro__list-data {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
