--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -16,6 +16,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
+}
+
 @media screen and (max-width: 680px) {
   .lead__subtitle {
     margin-top: 50px;
